[project]
name = "motosense-backend"
version = "0.1.0"
description = "FastAPI backend for MotoSense engine sound diagnosis."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.136.3",
  "joblib==1.5.3",
  "librosa==0.11.0",
  "numpy==2.4.6",
  "python-multipart==0.0.32",
  "scikit-learn==1.8.0",
  "setuptools<81",
  "tensorflow==2.20.0",
  "tensorflow-hub==0.16.1",
  "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
