[project]
name = "motosense-backend"
version = "0.1.0"
description = "FastAPI backend for MotoSense engine sound diagnosis."
requires-python = ">=3.12,<3.13"
dependencies = [
  "ai-edge-litert==2.1.5",
  "fastapi==0.136.3",
  "joblib==1.5.3",
  "numpy==2.4.6",
  "python-multipart==0.0.32",
  "scikit-learn==1.8.0",
  "uvicorn[standard]==0.49.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
